# python-cpp-project-structure

./: .gitignore  LICENSE  Makefile  README.md  main.py  requirements.txt
module1/: calculator.py
module2/: __init__.py  calculator_new.py
modules/example_module1/: Makefile.mk  setup.py
modules/example_module1/example_module1/: __init__.py  calculator_module1.py
modules/example_module1/example_module1/scripts/: script_m1.py
modules/example_module1/tests_module1/: test_module1.py
modules/example_module2/: setup.py
modules/example_module2/example_module2/: __init__.py  calculator_module2.py
modules/example_module2/tests/: test_example_module2.py
modules/example_module_cpp/: CMakeLists.txt  setup.py
modules/example_module_cpp/src/: bindings.cpp  multiplication.hpp
modules/example_module_cpp/tests/: test_module_cpp.py
scripts/: Makefile.mk  example_with_arguments.py
tests/: test_calculator.py  test_modules.py
